@@ -1,0 +1,87 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*  *  Licensed to the Apache Software Foundation (ASF) under one or more  *  contributor license agreements.  See the NOTICE file distributed with  *  this work for additional information regarding copyright ownership.  *  The ASF licenses this file to You under the Apache License, Version 2.0  *  (the "License"); you may not use this file except in compliance with  *  the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  *  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|event
+operator|.
+name|retrieve
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|report
+operator|.
+name|ArtifactDownloadReport
+import|;
+end_import
+
+begin_class
+specifier|public
+class|class
+name|EndRetrieveArtifactEvent
+extends|extends
+name|RetrieveArtifactEvent
+block|{
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|NAME
+init|=
+literal|"pre-retrieve-artifact"
+decl_stmt|;
+specifier|public
+name|EndRetrieveArtifactEvent
+parameter_list|(
+name|ArtifactDownloadReport
+name|report
+parameter_list|,
+name|File
+name|destFile
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|NAME
+argument_list|,
+name|report
+argument_list|,
+name|destFile
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
