@@ -1,0 +1,236 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*  *  Licensed to the Apache Software Foundation (ASF) under one or more  *  contributor license agreements.  See the NOTICE file distributed with  *  this work for additional information regarding copyright ownership.  *  The ASF licenses this file to You under the Apache License, Version 2.0  *  (the "License"); you may not use this file except in compliance with  *  the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  *  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|event
+operator|.
+name|retrieve
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|event
+operator|.
+name|IvyEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
+name|Artifact
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|report
+operator|.
+name|ArtifactDownloadReport
+import|;
+end_import
+
+begin_class
+specifier|public
+class|class
+name|RetrieveArtifactEvent
+extends|extends
+name|IvyEvent
+block|{
+specifier|private
+name|ArtifactDownloadReport
+name|report
+decl_stmt|;
+specifier|private
+name|File
+name|destFile
+decl_stmt|;
+specifier|public
+name|RetrieveArtifactEvent
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|ArtifactDownloadReport
+name|report
+parameter_list|,
+name|File
+name|destFile
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
+name|addArtifactAttributes
+argument_list|(
+name|report
+operator|.
+name|getArtifact
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|report
+operator|=
+name|report
+expr_stmt|;
+name|this
+operator|.
+name|destFile
+operator|=
+name|destFile
+expr_stmt|;
+name|addAttribute
+argument_list|(
+literal|"from"
+argument_list|,
+name|report
+operator|.
+name|getLocalFile
+argument_list|()
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|addAttribute
+argument_list|(
+literal|"to"
+argument_list|,
+name|destFile
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|addAttribute
+argument_list|(
+literal|"size"
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|destFile
+operator|.
+name|length
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|protected
+name|void
+name|addArtifactAttributes
+parameter_list|(
+name|Artifact
+name|artifact
+parameter_list|)
+block|{
+name|addMridAttributes
+argument_list|(
+name|artifact
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|addAttributes
+argument_list|(
+name|artifact
+operator|.
+name|getAttributes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|addAttribute
+argument_list|(
+literal|"metadata"
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|artifact
+operator|.
+name|isMetadata
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|File
+name|getDestFile
+parameter_list|()
+block|{
+return|return
+name|destFile
+return|;
+block|}
+specifier|public
+name|ArtifactDownloadReport
+name|getReport
+parameter_list|()
+block|{
+return|return
+name|report
+return|;
+block|}
+block|}
+end_class
+
+end_unit
+
