@@ -255,7 +255,43 @@ name|event
 operator|.
 name|retrieve
 operator|.
+name|EndRetrieveArtifactEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|event
+operator|.
+name|retrieve
+operator|.
 name|EndRetrieveEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|event
+operator|.
+name|retrieve
+operator|.
+name|StartRetrieveArtifactEvent
 import|;
 end_import
 
@@ -975,6 +1011,31 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+name|this
+operator|.
+name|eventManager
+operator|!=
+literal|null
+condition|)
+block|{
+name|this
+operator|.
+name|eventManager
+operator|.
+name|fireIvyEvent
+argument_list|(
+operator|new
+name|StartRetrieveArtifactEvent
+argument_list|(
+name|artifact
+argument_list|,
+name|destFile
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
 name|options
 operator|.
 name|isMakeSymlinks
@@ -1008,6 +1069,31 @@ argument_list|,
 literal|null
 argument_list|,
 literal|true
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|this
+operator|.
+name|eventManager
+operator|!=
+literal|null
+condition|)
+block|{
+name|this
+operator|.
+name|eventManager
+operator|.
+name|fireIvyEvent
+argument_list|(
+operator|new
+name|EndRetrieveArtifactEvent
+argument_list|(
+name|artifact
+argument_list|,
+name|destFile
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
