@@ -139,7 +139,43 @@ name|event
 operator|.
 name|retrieve
 operator|.
+name|EndRetrieveArtifactEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|event
+operator|.
+name|retrieve
+operator|.
 name|EndRetrieveEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|event
+operator|.
+name|retrieve
+operator|.
+name|StartRetrieveArtifactEvent
 import|;
 end_import
 
@@ -902,7 +938,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|2
+literal|4
 argument_list|,
 name|events
 operator|.
@@ -931,6 +967,30 @@ argument_list|(
 literal|1
 argument_list|)
 operator|instanceof
+name|StartRetrieveArtifactEvent
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|events
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+operator|instanceof
+name|EndRetrieveArtifactEvent
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|events
+operator|.
+name|get
+argument_list|(
+literal|3
+argument_list|)
+operator|instanceof
 name|EndRetrieveEvent
 argument_list|)
 expr_stmt|;
@@ -944,7 +1004,7 @@ name|events
 operator|.
 name|get
 argument_list|(
-literal|1
+literal|3
 argument_list|)
 decl_stmt|;
 name|assertEquals
